--- a/moblet/m-ecommet.html
+++ b/moblet/m-ecommet.html
@@ -1,9 +1,9 @@
 <m-moblet init="init"  is-loading="isLoading" inner-scroll="true" no-content="noContent" unavaliable="error">
   <m-content reload="load" more="more" >
     <!-- LIST -->
-    <div class="list" ng-if="!isDetail">
+    <div class="list">
       <!-- CARD STYLE -->
-      <div ng-if="isCard">
+      <div>
         <h1 ng-bind="apiUrl"></h1>
       </div>
     </div>
