--- a/moblet/m-ecommet.html
+++ b/moblet/m-ecommet.html
@@ -3,6 +3,7 @@
     <div class="store">
 			<div class="search-bar">
 				<input type="search" name="products" value="">
+      </div>
       <div>
         <h1 ng-bind="store.titleHome"></h1>
         <img ng-src="{{slider[0].image}}" alt="{{slider[0].alt}}" class="store-slider"/>
