--- a/moblet/m-ecommet.html
+++ b/moblet/m-ecommet.html
@@ -4,10 +4,12 @@
 			<div class="search-bar">
 				<input type="search" name="products" value="">
       </div>
-      <div>
-        <h1 ng-bind="store.titleHome"></h1>
-        <img ng-src="{{slider[0].image}}" alt="{{slider[0].alt}}" class="store-slider"/>
+      <div class="carouselbox" style="height: {{slider.height}}">
+        <div ng-repeat="slide in slider">
+          <img class="slide{{slide.currentSlide}}{{slide.nextSlide}}" ng-src="{{slide.image}}" alt="{{slider.alt}}" class="store-slider"/>
+        </div>
       </div>
+      <h1 ng-bind="store.titleHome"></h1>
     </div>
     <!-- Detail -->
     <div class="detail m-theme-null-background {{ itemStyle }}" ng-if="isDetail">
