[master] Updated layout

--- a/moblet/m-becommerce.html
+++ b/moblet/m-becommerce.html
@@ -1,13 +1,18 @@
 <m-moblet init="init"  is-loading="isLoading" inner-scroll="true" no-content="noContent" unavaliable="error">
   <m-content reload="load" more="more" >
     <div class="store">
-			<div class="search-bar">
-				<input type="search" name="products" value="">
+			<div class="search-bar m-theme-bar-top">
+				<input class="search-input" type="search" ng-model="search" name="products" placeholder="Buscar">
+        <div class="store-menu">
+          <div class="menu-button m-theme-button selected" type="button" name="button">Home</div>
+          <div class="menu-button m-theme-button" type="button" name="button">Categorias</div>
+        </div>
       </div>
 
       <div class="banner">
         <img ng-src="{{banners[0].image}}" alt="{{banners[0].alt}}" class="store-banner"/>
       </div>
+      {{search}}
       <h1 ng-bind="store.titleHome"></h1>
       <div class="categories">
         <div ng-repeat="category in categories">
