--- a/moblet/m-becommerce.html
+++ b/moblet/m-becommerce.html
@@ -11,10 +11,21 @@
       ng-if="view === 'store'">
       <!-- SEARCH BAR -->
 			<div class="search-bar m-theme-bar-top">
-				<input class="search-input" type="search" ng-model="search" name="products" placeholder="Buscar">
+				<input
+          class="search-input"
+          type="search"
+          ng-model="search"
+          name="products"
+          placeholder="Buscar">
         <div class="store-menu">
-          <div class="menu-button m-theme-button selected" type="button" name="button">Home</div>
-          <div class="menu-button m-theme-button" type="button" name="button">Categorias</div>
+          <div
+            class="menu-button m-theme-button selected"
+            type="button"
+            name="button">Home</div>
+          <div
+            class="menu-button m-theme-button"
+            type="button"
+            name="button">Categorias</div>
         </div>
       </div>
       <!-- BANNER -->
