[master] Corrected init name

--- a/moblet/m-becommerce.html
+++ b/moblet/m-becommerce.html
@@ -1,4 +1,4 @@
-<m-moblet init="init"  is-loading="isLoading" inner-scroll="true" no-content="noContent" unavaliable="error">
+<m-moblet init="router"  is-loading="isLoading" inner-scroll="true" no-content="noContent" unavaliable="error">
   <m-content>
     <style>
       .more-products-button {
