[master] Changed some class names and the resize and scroll order when loading some lists

--- a/moblet/m-becommerce.html
+++ b/moblet/m-becommerce.html
@@ -56,7 +56,7 @@ unavaliable="error"
       <div
         ng-if="section.products.length > 0"
         ng-repeat="(sectionIndex, section) in sections"
-        class="sections"
+        class="section"
         id="section-{{ sectionIndex }}"
         >
         <h1
