[master] Added dinamic header buton class

--- a/moblet/m-becommerce.html
+++ b/moblet/m-becommerce.html
@@ -16,20 +16,25 @@ unavaliable="error"
       <!-- SEARCH BAR -->
 			<div class="search-bar m-theme-bar-top {{ platform }}">
 				<input
-          class="search-input"
-          type="search"
-          ng-model="search"
-          name="products"
-          placeholder="Buscar">
+        ng-model="search"
+        class="search-input"
+        name="products"
+        type="search"
+        placeholder="Buscar"
+        >
         <div class="store-menu">
           <div
-            class="menu-button m-theme-button selected"
-            type="button"
-            name="button">Home</div>
+          class="menu-button m-theme-button"
+          ng-class="{'selected' : selected === menuButton.HOME }"
+          type="button"
+          name="button"
+          >Home</div>
           <div
-            class="menu-button m-theme-button"
-            type="button"
-            name="button">Categorias</div>
+          class="menu-button m-theme-button"
+          ng-class="{'selected' : selected === menuButton.CATEGORIES }"
+          type="button"
+          name="button"
+          >Categorias</div>
         </div>
       </div>
       <!-- BANNER -->
