[master] Updated menu layout

--- a/moblet/m-becommerce.html
+++ b/moblet/m-becommerce.html
@@ -5,13 +5,11 @@ inner-scroll="true"
 no-content="noContent"
 unavaliable="error"
 >
-  <m-content
-  class="m-theme-null-background"
-  >
+  <m-content>
     <!-- STORE VIEW (MAIN) -->
     <div
     ng-if="view === page.STORE"
-    class="store"
+    class="store m-theme-null-background"
     >
       <!-- SEARCH BAR -->
 			<div class="search-bar m-theme-bar-top {{ platform }}">
