--- a/moblet/m-becommerce.html
+++ b/moblet/m-becommerce.html
@@ -6,7 +6,9 @@ no-content="noContent"
 unavaliable="error"
 >
   <m-content>
-    <!-- STORE VIEW (MAIN) -->
+    <!-- ################################################################## -->
+    <!-- ######################## STORE VIEW (MAIN) ####################### -->
+    <!-- ################################################################## -->
     <div
     ng-if="view === page.STORE"
     class="store m-theme-null-background"
@@ -37,14 +39,14 @@ unavaliable="error"
         </div>
       </div>
       <!-- BANNER -->
-      <div id="banner-container" class="banner">
+      <div id="banner-container" class="banner bottom-border">
         <div ng-repeat="banner in banners.products | limitTo: banners.limit">
           <img ng-src="{{ banner.image }}" alt="{{ banner.alt }}" />
         </div>
         <div
         ng-if="banners.hasMoreBanners"
         ng-click="bannersLimitSwap()"
-        class="more-highlights-button"
+        class="more-highlights-button side-padding"
         >
           <span ng-if="banners.showMoreBannersButton">
             mais destaques
@@ -60,7 +62,7 @@ unavaliable="error"
       <div
       ng-repeat="(sectionIndex, section) in sections"
       ng-if="section.hasProducts"
-      class="section"
+      class="section bottom-border side-padding"
       id="section-{{ sectionIndex }}"
       >
         <h1
@@ -129,25 +131,72 @@ unavaliable="error"
         </div>
       </div>
     </div>
-    <!-- PRODUCT VIEW -->
+    <!-- ################################################################## -->
+    <!-- ########################## PRODUCT VIEW ########################## -->
+    <!-- ################################################################## -->
     <div
     ng-if="view === page.PRODUCT"
     class="product"
     >
       <div class="detail-container">
+        <!-- PRODUCT SLIDER -->
         <ion-slides options="sliderOptions" slider="slider.sliderDelegate">
           <ion-slide-page
           ng-repeat="image in product.productImages"
           >
-          <div
-          class="image-container"
-          style="background-image: url('{{ image.url }}')"
-          >
-            <!-- <img ng-src="{{ image.url }}"> -->
+            <div
+            class="image-container"
+            style="background-image: url('{{ image.url }}')"
+            >
+            </div>
+          </ion-slide-page>
+        </ion-slides>
+        <!-- PRODUCT DATA -->
+        <div class="title side-padding">
+          <h1 ng-bind="product.name"></h1>
+          <h2 ng-bind="product.smallDescription"></h2>
+        </div>
+        <hr>
+        <div class="options bottom-border side-padding">
+          Opções do produto
+        </div>
+        <div class="options bottom-border side-padding">
+          Frete e prazo de entrega
+        </div>
+        <!-- PRODUCT PRICE AND CTA -->
+        <div class="price bottom-border side-padding">
+          <div class="cc">
+            <span
+            ng-bind="localizeCurrency(product.valueTo)"
+            class="price"
+            ></span>
+            <div class="installment m-theme-text-color">ver parcelamento</div>
+            <div class="type">no cartão de crédito</div>
           </div>
-        </ion-slide-page>
-      </ion-slides>
-        <h1 class="title" ng-bind="product.name"></h1>
+          <div
+          ng-if="product.discountValue.value"
+          class="slip"
+          >
+            <span
+            ng-bind="product.discountValue.value"
+            class="price"
+            ></span>
+            <div class="type">
+              no {{ product.discountValue.label}}
+              <span class="discount m-theme-text-color">
+                ({{ product.discountValue.discountValue }} de desconto)
+              </span>
+            </div>
+          </div>
+          <div class="cta m-theme-bar-top">
+            Comprar
+          </div>
+        </div>
+        <div class="options bottom-border side-padding">
+          Descrição
+          <hr>
+          Ficha técnica
+        </div>
         <div class="description" m-bind-html="product.description"></div>
       </div>
     </div>
